objects/Import_Manager_Job__c.object
<CustomObject>
    <fields>
        <fullName>Import_Request_Total__c</fullName>
        <label>Import Request Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Import Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Failures__c</fullName>
        <label>Number of Failures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Successes__c</fullName>
        <label>Number of Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Import Manager Jobs</relationshipLabel>
        <relationshipName>Import_Manager_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Import Manager Job</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Work_Type__c</columns>
        <columns>Import_Status__c</columns>
        <columns>Result__c</columns>
        <columns>Import_Request_Total__c</columns>
        <columns>Number_of_Successes__c</columns>
        <columns>Number_of_Failures__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Job# {000000}</displayFormat>
        <label>Import Manager Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Manager Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>